edit Ignore to reject image except no_image.jpg

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 # Ignore seed data
 db/seeds.rb
 
+# Ignore image
+app/assets/images/*
+!app/assets/images/no_image.jpg
+!app/assets/images/.keep
+
 # Ignore bundler config.
 /.bundle
 
