--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,9 @@ development:
 test:
   adapter: async
 
+# production:
+#   adapter: redis
+#   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#   channel_prefix: PlayCreatePublishLifeGame_production
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: PlayCreatePublishLifeGame_production
+  adapter: async
