--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@
 /public/assets
 .byebug_history
 .DS_Store
+/db/.DS_Store
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
